@@ -487,6 +487,8 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * The HTML of diff output markers has changed. Hyphens are now minus signs, 
   empty markers are now filled with non-breaking-space characters
 * (bug 25741) Add more data to list=search's srprop
+* (bug 25760) counter property still reported by the API when
+  $wgDisableCounters enabled
 
 === Languages updated in 1.17 ===
 
